maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:24: error: value +=- is not a member of Int
    vir+=-1
       ^